--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
